# ipb-internship-and-career-tracker

./: LICENSE
backend/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/src/app_backend/: main.py
backend/src/app_backend/conf/: settings.py
backend/src/app_backend/domain/: user.py
backend/src/app_backend/features/login_user/: login_user_command.py
backend/src/app_backend/features/register_user/: register_user_command.py
backend/src/app_backend/models/: user.py
backend/src/app_backend/routers/api/: auth.py
backend/src/app_backend/schemas/: user.py
backend/src/app_backend/scripts/: load_fixtures.py
backend/src/app_backend/shared/: database.py  dependencies.py  security.py
frontend/: package-lock.json
